[project]
name = "token-manager"
version = "0.1.0"
description = "Lightweight token tracking, budgeting, and optimisation for Anthropic API calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.10.0",
    "uvicorn[standard]>=0.26.0",
    "anthropic>=0.6.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0"
]

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
